# wireguard

./: README.md  package-lock.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnwireguard/: BaseLifecycleEventListener.java  Constants.java  RNWireguardCallbacks.java  RNWireguardModule.java  RNWireguardPackage.java  WGVpnService.java  WGVpnServiceCallbacks.java
android/src/main/java/com/rnwireguard/config/: WGConfig.java  WGInterface.java  WGPeer.java
android/src/main/java/com/rnwireguard/util/: CIDR.java  Key.java  Resolver.java  SOLoader.java
android/src/main/java/com/rnwireguard/wrapper/: WGWrapper.java
android/tools/: CMakeLists.txt
android/tools/dummy/: dummy.c
android/tools/libwg-go/: go.mod  go.sum  jni.c
